added index.html and controller